finished irq-assignments

--- a/LV5/C/Makefile
+++ b/LV5/C/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ sysick_irq - Debug ]----------"
-	@cd "sysick_irq" && "$(MAKE)" -f  "sysick_irq.mk" && "$(MAKE)" -f  "sysick_irq.mk" PostBuild
+	@echo "----------Building project:[ flipflop_irq_erik - Debug ]----------"
+	@cd "flipflop_irq_erik" && "$(MAKE)" -f  "flipflop_irq_erik.mk" && "$(MAKE)" -f  "flipflop_irq_erik.mk" PostBuild
 clean:
-	@echo "----------Cleaning project:[ sysick_irq - Debug ]----------"
-	@cd "sysick_irq" && "$(MAKE)" -f  "sysick_irq.mk" clean
+	@echo "----------Cleaning project:[ flipflop_irq_erik - Debug ]----------"
+	@cd "flipflop_irq_erik" && "$(MAKE)" -f  "flipflop_irq_erik.mk" clean
