--- a/LV5/C/controlRegister/controlRegister.project
+++ b/LV5/C/controlRegister/controlRegister.project
@@ -138,4 +138,6 @@ ARM_GCC_M4FPLIB=$(GccArmDir)/lib/gcc/arm-none-eabi/7.2.1/thumb/v7e-m]]>
   <VirtualDirectory Name="src">
     <File Name="startup.c"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
