--- a/LV5/C/6_2_1/6_2_1.project
+++ b/LV5/C/6_2_1/6_2_1.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="flipflop_irq" Version="10.0.0" InternalType="User templates">
+<CodeLite_Project Name="6_2_1" Version="10.0.0" InternalType="User templates">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -136,7 +136,6 @@ ARM_GCC_M4FPLIB=$(GccArmDir)/lib/gcc/arm-none-eabi/7.2.1/thumb/v7e-m]]>
     <File Name="md407-ram.x"/>
   </VirtualDirectory>
   <VirtualDirectory Name="src">
-    <File Name="InterruptStructs.h"/>
     <File Name="startup.c"/>
   </VirtualDirectory>
   <Dependencies Name="Debug"/>
